[package]
name = "ackermann"
version = "0.1.0"
authors = ["Kevin Tran <kevintran@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "my_benchmark"
harness = false
